<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/top_menu">
        <item
            android:id="@+id/nav_dialog"
            android:icon="@drawable/ic_question_answer_black_48dp"
            android:title="@string/nav_dialog"/>
        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_speaker_notes_black_48dp"
            android:title="@string/nav_cards" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/vector_drawable_ic_add_box_black___px"
            android:title="@string/nav_add"/>
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/bottom_menu">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_48dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/nav_about"
            android:icon="@drawable/vector_drawable_ic_info_black___px"/>
    </group>
</menu>