<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Dialog2.Dialog2Activity"
    android:fitsSystemWindows="true"
    android:background="@color/dialog2_background"
    android:id="@+id/dialog2_activity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/line"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginBottom="@dimen/dialog2_edit_text_height"
        app:stackFromEnd="true"
        app:reverseLayout="true"
        android:rotation="180"
        android:verticalScrollbarPosition="left"/>

    <include layout="@layout/dialog2_content_vocalizer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:animateLayoutChanges="true">
        <LinearLayout
            android:id="@+id/full_screen_layout"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/dialog2_fs_background"
            android:layout_marginBottom="@dimen/dialog2_edit_text_height"
            android:visibility="gone"
            android:clickable="true">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dialog2_fs_card_margin"
                android:layout_weight="1"
                android:elevation="@dimen/dialog2_fs_card_elevation">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dialog2_fs_card_text">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog2_fs_up_text"
                            android:textColor="@color/dialog2_fs_up"
                            android:id="@+id/up_text"/>
                        <TextView
                            android:id="@+id/up_text_2"
                            android:textColor="@color/dialog2_fs_up_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog2_fs_up_text_2"/>
                    </LinearLayout>
                    <TextView
                        android:layout_gravity="bottom|right"
                        android:rotation="180"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/dialog2_fs_up_r"
                        android:text="@string/dialog2_fs_up_text"
                        android:id="@+id/up_text_r"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dialog2_fs_card_margin"
                android:layout_marginTop="0dp"
                android:layout_marginRight="@dimen/dialog2_fs_card_margin"
                android:layout_marginBottom="@dimen/dialog2_fs_card_margin"
                android:layout_weight="1"
                android:elevation="@dimen/dialog2_fs_card_elevation"
                android:rotation="180">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/dialog2_fs_card_text">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog2_fs_down_text"
                            android:textColor="@color/dialog2_fs_down"
                            android:id="@+id/down_text"/>
                        <TextView
                            android:id="@+id/down_text_2"
                            android:textColor="@color/dialog2_fs_down_2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dialog2_fs_down_text"/>
                    </LinearLayout>
                    <TextView
                        android:layout_gravity="bottom|right"
                        android:rotation="180"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textColor="@color/dialog2_fs_down_r"
                        android:text="@string/dialog2_fs_down_text_r"
                        android:id="@+id/down_text_r"/>
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/line"
        android:background="@color/dialog2_edit_text_line"
        android:layout_above="@+id/linearLayout"
        android:layout_marginBottom="@dimen/dialog2_edit_text_height"
        android:alpha="0">
    </View>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal|bottom"
        android:background="@color/dialog2_edit_text_background"
        android:id="@+id/linearLayout"
        android:elevation="@dimen/dialog2_edit_text_elevation">
        <EditText
            android:layout_marginTop="@dimen/dialog2_edit_text_margin"
            android:layout_marginLeft="@dimen/dialog2_edit_text_margin"
            android:layout_marginBottom="@dimen/dialog2_edit_text_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/dialog2_edit_ext_min_height"
            android:id="@+id/edit_text"
            android:background="#00000000"
            android:elegantTextHeight="true"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines="4"
            android:focusable="true"
            android:autoText="false"
            android:hint="@string/dialog2_hint_text"
            android:textSize="@dimen/dialog2_edit_text"
            android:textColor="@color/dialog2_edit_text_text"
            android:textColorHint="@color/dialog2_edit_text_hint"
            android:layout_gravity="center_vertical"
            android:textCursorDrawable="@drawable/dialog2_edit_text_cursor_color"
            android:layout_weight="1"
            android:scrollbars="vertical"/>
        <ImageButton
            android:id="@+id/button_send"
            android:layout_marginLeft="@dimen/dialog2_btn_send_marg_left"
            android:layout_marginRight="@dimen/dialog2_btn_send_marg_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="bottom"
            app:srcCompat="@drawable/dialog2_vector_drawable_ic_keyboard_return_black___px"
            android:tint="@color/dialog2_edit_text_enter"
            android:scaleType="fitXY"
            android:background="@color/dialog2_edit_text_background"/>
    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="@dimen/toolbar_elevation"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/dialog2_content_recognizer"/>

</android.support.design.widget.CoordinatorLayout>
